[project]
name = "my_package"
description = "My package description"
readme = "README.rst, CHANGELOG.rst, LICENSE.rst"
keywords = ["one", "two"]
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
]
dynamic = ["version"]
dependencies = [
    "requests",
    "importlib; python_version == \"2.6\"",
]

[project.license]
text = "BSD 3-Clause License"

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
executable-name = "package.module:function"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true
script-files = [
    "bin/first.py",
    "bin/second.py",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]
hello = ["*.msg"]

[tool.setuptools.packages.find]
exclude = [
    "src.subpackage1",
    "src.subpackage2",
]

[tool.setuptools.data-files]
"/etc/my-package" = [
    "site.d/00_default.conf",
    "host.d/00_default.conf",
]
data = ["data/img/logo.png", "data/svg/icon.svg"]
fonts = ["data/fonts/*.ttf", "data/fonts/*.otf"]

[tool.setuptools.dynamic]
version = {attr = "src.VERSION"}
