[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zipp"
authors = [{name = "Jason R. Coombs", email = "jaraco@jaraco.com"}]
description = "Backport of pathlib-compatible object wrapper for zip files"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
urls = {Homepage = "https://github.com/jaraco/zipp"}
requires-python = ">=3.6"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    # upstream
    "pytest >= 6",
    "pytest-checkdocs >= 2.4",
    "pytest-flake8",
    'pytest-black >= 0.3.7; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
    "pytest-cov",
    'pytest-mypy; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
    "pytest-enabler >= 1.0.1",
    # local
    "jaraco.itertools",
    "func-timeout",
]
docs = [
    # upstream
    "sphinx",
    "jaraco.packaging >= 8.2",
    "rst.linker >= 1.9",
    # local
]

[tool.setuptools]
py-modules = ["zipp"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "build*",
    "dist*",
    "docs*",
    "tests*",
]
namespaces = true
